--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="w-100 text-center p-5 main">
         <h1 class="text-center">Quote of the Day</h1>
         <h4 class="pt-5">Press the button below to recieve a random quote!</h4>
-        <button onclick="generateRandomQuote()" class="w-25 m-4 p-5 btn btn-outline-dark">New Quote</button>
+        <button onclick="generateRandomQuote()" class="m-4 p-5 btn btn-outline-dark w-auto">New Quote</button>
         <p id="quote" class="text-black fs-2 fst-italic"></p>
         <p id="author" class="fs-4 fst-italic text-dark-emphasis"></p>
     </div>
